// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button icon should render a button with left icon 1`] = `
<button
  class="Buttonbasestyles__ButtonBase-sc-ybojtw-0 Buttonfilledstyles__FilledButton-sc-1s1d10f-0 hgXHin ceWXkd"
  data-medesign-key="button"
  label="Button"
>
  <span
    aria-label="code"
    class="anticon anticon-code"
    role="img"
    style="font-size: 18px;"
  >
    <svg
      aria-hidden="true"
      data-icon="code"
      fill="currentColor"
      focusable="false"
      height="1em"
      viewBox="0 0 1024 1024"
      width="1em"
    >
      <path
        d="M880 112H144c-17.7 0-32 14.3-32 32v736c0 17.7 14.3 32 32 32h736c17.7 0 32-14.3 32-32V144c0-17.7-14.3-32-32-32zM513.1 518.1l-192 161c-5.2 4.4-13.1.7-13.1-6.1v-62.7c0-2.3 1.1-4.6 2.9-6.1L420.7 512l-109.8-92.2a7.63 7.63 0 01-2.9-6.1V351c0-6.8 7.9-10.5 13.1-6.1l192 160.9c3.9 3.2 3.9 9.1 0 12.3zM716 673c0 4.4-3.4 8-7.5 8h-185c-4.1 0-7.5-3.6-7.5-8v-48c0-4.4 3.4-8 7.5-8h185c4.1 0 7.5 3.6 7.5 8v48z"
      />
    </svg>
  </span>
  <span
    style="white-space: nowrap; overflow: hidden; text-overflow: ellipsis;"
  >
    Button
  </span>
</button>
`;

exports[`Button icon should render a button with only an icon 1`] = `
<button
  class="Buttonbasestyles__ButtonBase-sc-ybojtw-0 Buttonfilledstyles__FilledButton-sc-1s1d10f-0 cvTHPJ ceWXkd"
  data-medesign-key="button"
>
  <span
    aria-label="code"
    class="anticon anticon-code"
    role="img"
    style="font-size: 18px;"
  >
    <svg
      aria-hidden="true"
      data-icon="code"
      fill="currentColor"
      focusable="false"
      height="1em"
      viewBox="0 0 1024 1024"
      width="1em"
    >
      <path
        d="M880 112H144c-17.7 0-32 14.3-32 32v736c0 17.7 14.3 32 32 32h736c17.7 0 32-14.3 32-32V144c0-17.7-14.3-32-32-32zM513.1 518.1l-192 161c-5.2 4.4-13.1.7-13.1-6.1v-62.7c0-2.3 1.1-4.6 2.9-6.1L420.7 512l-109.8-92.2a7.63 7.63 0 01-2.9-6.1V351c0-6.8 7.9-10.5 13.1-6.1l192 160.9c3.9 3.2 3.9 9.1 0 12.3zM716 673c0 4.4-3.4 8-7.5 8h-185c-4.1 0-7.5-3.6-7.5-8v-48c0-4.4 3.4-8 7.5-8h185c4.1 0 7.5 3.6 7.5 8v48z"
      />
    </svg>
  </span>
</button>
`;

exports[`Button icon should render a button with right icon 1`] = `
<button
  class="Buttonbasestyles__ButtonBase-sc-ybojtw-0 Buttonfilledstyles__FilledButton-sc-1s1d10f-0 kXQcXI ceWXkd"
  data-medesign-key="button"
  label="Button"
>
  <span
    style="white-space: nowrap; overflow: hidden; text-overflow: ellipsis;"
  >
    Button
  </span>
  <span
    aria-label="code"
    class="anticon anticon-code"
    role="img"
    style="font-size: 18px;"
  >
    <svg
      aria-hidden="true"
      data-icon="code"
      fill="currentColor"
      focusable="false"
      height="1em"
      viewBox="0 0 1024 1024"
      width="1em"
    >
      <path
        d="M880 112H144c-17.7 0-32 14.3-32 32v736c0 17.7 14.3 32 32 32h736c17.7 0 32-14.3 32-32V144c0-17.7-14.3-32-32-32zM513.1 518.1l-192 161c-5.2 4.4-13.1.7-13.1-6.1v-62.7c0-2.3 1.1-4.6 2.9-6.1L420.7 512l-109.8-92.2a7.63 7.63 0 01-2.9-6.1V351c0-6.8 7.9-10.5 13.1-6.1l192 160.9c3.9 3.2 3.9 9.1 0 12.3zM716 673c0 4.4-3.4 8-7.5 8h-185c-4.1 0-7.5-3.6-7.5-8v-48c0-4.4 3.4-8 7.5-8h185c4.1 0 7.5 3.6 7.5 8v48z"
      />
    </svg>
  </span>
</button>
`;

exports[`Button icon should render a button with rtl 1`] = `
<button
  class="Buttonbasestyles__ButtonBase-sc-ybojtw-0 Buttonfilledstyles__FilledButton-sc-1s1d10f-0 kXQcXI ceWXkd"
  data-medesign-key="button"
  label="Button"
>
  <span
    style="white-space: nowrap; overflow: hidden; text-overflow: ellipsis;"
  >
    Button
  </span>
  <span
    aria-label="code"
    class="anticon anticon-code"
    role="img"
    style="font-size: 18px;"
  >
    <svg
      aria-hidden="true"
      data-icon="code"
      fill="currentColor"
      focusable="false"
      height="1em"
      viewBox="0 0 1024 1024"
      width="1em"
    >
      <path
        d="M880 112H144c-17.7 0-32 14.3-32 32v736c0 17.7 14.3 32 32 32h736c17.7 0 32-14.3 32-32V144c0-17.7-14.3-32-32-32zM513.1 518.1l-192 161c-5.2 4.4-13.1.7-13.1-6.1v-62.7c0-2.3 1.1-4.6 2.9-6.1L420.7 512l-109.8-92.2a7.63 7.63 0 01-2.9-6.1V351c0-6.8 7.9-10.5 13.1-6.1l192 160.9c3.9 3.2 3.9 9.1 0 12.3zM716 673c0 4.4-3.4 8-7.5 8h-185c-4.1 0-7.5-3.6-7.5-8v-48c0-4.4 3.4-8 7.5-8h185c4.1 0 7.5 3.6 7.5 8v48z"
      />
    </svg>
  </span>
</button>
`;

exports[`Button loading should render a button with loading styles 1`] = `
<button
  class="Buttonbasestyles__ButtonBase-sc-ybojtw-0 Buttonfilledstyles__FilledButton-sc-1s1d10f-0 eanouO ceWXkd"
  data-medesign-key="button"
  label="Button"
>
  <span
    aria-label="code"
    class="anticon anticon-code anticon-spin"
    role="img"
    style="font-size: 18px;"
  >
    <svg
      aria-hidden="true"
      data-icon="code"
      fill="currentColor"
      focusable="false"
      height="1em"
      viewBox="0 0 1024 1024"
      width="1em"
    >
      <path
        d="M516 673c0 4.4 3.4 8 7.5 8h185c4.1 0 7.5-3.6 7.5-8v-48c0-4.4-3.4-8-7.5-8h-185c-4.1 0-7.5 3.6-7.5 8v48zm-194.9 6.1l192-161c3.8-3.2 3.8-9.1 0-12.3l-192-160.9A7.95 7.95 0 00308 351v62.7c0 2.4 1 4.6 2.9 6.1L420.7 512l-109.8 92.2a8.1 8.1 0 00-2.9 6.1V673c0 6.8 7.9 10.5 13.1 6.1zM880 112H144c-17.7 0-32 14.3-32 32v736c0 17.7 14.3 32 32 32h736c17.7 0 32-14.3 32-32V144c0-17.7-14.3-32-32-32zm-40 728H184V184h656v656z"
      />
    </svg>
  </span>
  Loading
</button>
`;

exports[`Button loading should render a button with loading styles and only icon 1`] = `
<button
  class="Buttonbasestyles__ButtonBase-sc-ybojtw-0 Buttonfilledstyles__FilledButton-sc-1s1d10f-0 fMBosi ceWXkd"
  data-medesign-key="button"
>
  <span
    aria-label="code"
    class="anticon anticon-code anticon-spin"
    role="img"
    style="font-size: 18px;"
  >
    <svg
      aria-hidden="true"
      data-icon="code"
      fill="currentColor"
      focusable="false"
      height="1em"
      viewBox="0 0 1024 1024"
      width="1em"
    >
      <path
        d="M516 673c0 4.4 3.4 8 7.5 8h185c4.1 0 7.5-3.6 7.5-8v-48c0-4.4-3.4-8-7.5-8h-185c-4.1 0-7.5 3.6-7.5 8v48zm-194.9 6.1l192-161c3.8-3.2 3.8-9.1 0-12.3l-192-160.9A7.95 7.95 0 00308 351v62.7c0 2.4 1 4.6 2.9 6.1L420.7 512l-109.8 92.2a8.1 8.1 0 00-2.9 6.1V673c0 6.8 7.9 10.5 13.1 6.1zM880 112H144c-17.7 0-32 14.3-32 32v736c0 17.7 14.3 32 32 32h736c17.7 0 32-14.3 32-32V144c0-17.7-14.3-32-32-32zm-40 728H184V184h656v656z"
      />
    </svg>
  </span>
</button>
`;

exports[`Button styles should render a large button 1`] = `
<button
  class="Buttonbasestyles__ButtonBase-sc-ybojtw-0 Buttonfilledstyles__FilledButton-sc-1s1d10f-0 gAsQie ceWXkd"
  data-medesign-key="button"
  label="Button"
>
  <span
    style="white-space: nowrap; overflow: hidden; text-overflow: ellipsis;"
  >
    Button
  </span>
</button>
`;

exports[`Button styles should render a medium button 1`] = `
<button
  class="Buttonbasestyles__ButtonBase-sc-ybojtw-0 Buttonfilledstyles__FilledButton-sc-1s1d10f-0 bezjLz ceWXkd"
  data-medesign-key="button"
  label="Button"
>
  <span
    style="white-space: nowrap; overflow: hidden; text-overflow: ellipsis;"
  >
    Button
  </span>
</button>
`;

exports[`Button styles should render a small button 1`] = `
<button
  class="Buttonbasestyles__ButtonBase-sc-ybojtw-0 Buttonfilledstyles__FilledButton-sc-1s1d10f-0 gLPlXh ceWXkd"
  data-medesign-key="button"
  label="Button"
>
  <span
    style="white-space: nowrap; overflow: hidden; text-overflow: ellipsis;"
  >
    Button
  </span>
</button>
`;

exports[`Button variants Filled should render a danger button 1`] = `
<button
  class="Buttonbasestyles__ButtonBase-sc-ybojtw-0 Buttonfilledstyles__FilledButton-sc-1s1d10f-0 bezjLz jFDgWw"
  data-medesign-key="button"
  label="Button"
>
  <span
    style="white-space: nowrap; overflow: hidden; text-overflow: ellipsis;"
  >
    Button
  </span>
</button>
`;

exports[`Button variants Filled should render a disabled button 1`] = `
<button
  class="Buttonbasestyles__ButtonBase-sc-ybojtw-0 Buttonfilledstyles__FilledButton-sc-1s1d10f-0 kEFyyi hBZVRu"
  data-medesign-key="button"
  disabled=""
  label="Button"
>
  <span
    style="white-space: nowrap; overflow: hidden; text-overflow: ellipsis;"
  >
    Button
  </span>
</button>
`;

exports[`Button variants Filled should render a filled button 1`] = `
<button
  class="Buttonbasestyles__ButtonBase-sc-ybojtw-0 Buttonfilledstyles__FilledButton-sc-1s1d10f-0 bezjLz ceWXkd"
  data-medesign-key="button"
  label="Button"
>
  <span
    style="white-space: nowrap; overflow: hidden; text-overflow: ellipsis;"
  >
    Button
  </span>
</button>
`;

exports[`Button variants Filled should render a success button 1`] = `
<button
  class="Buttonbasestyles__ButtonBase-sc-ybojtw-0 Buttonfilledstyles__FilledButton-sc-1s1d10f-0 bezjLz eyThUo"
  data-medesign-key="button"
  label="Button"
>
  <span
    style="white-space: nowrap; overflow: hidden; text-overflow: ellipsis;"
  >
    Button
  </span>
</button>
`;

exports[`Button variants Filled tonal should render a danger button 1`] = `
<button
  class="Buttonbasestyles__ButtonBase-sc-ybojtw-0 Buttontonalstyles__FilledTonalButton-sc-1xh321n-0 bezjLz gYJSSE"
  data-medesign-key="button"
  label="Button"
>
  <span
    style="white-space: nowrap; overflow: hidden; text-overflow: ellipsis;"
  >
    Button
  </span>
</button>
`;

exports[`Button variants Filled tonal should render a filled tonal button 1`] = `
<button
  class="Buttonbasestyles__ButtonBase-sc-ybojtw-0 Buttontonalstyles__FilledTonalButton-sc-1xh321n-0 bezjLz llaODQ"
  data-medesign-key="button"
  label="Button"
>
  <span
    style="white-space: nowrap; overflow: hidden; text-overflow: ellipsis;"
  >
    Button
  </span>
</button>
`;

exports[`Button variants Filled tonal should render a success button 1`] = `
<button
  class="Buttonbasestyles__ButtonBase-sc-ybojtw-0 Buttontonalstyles__FilledTonalButton-sc-1xh321n-0 bezjLz caRwxc"
  data-medesign-key="button"
  label="Button"
>
  <span
    style="white-space: nowrap; overflow: hidden; text-overflow: ellipsis;"
  >
    Button
  </span>
</button>
`;

exports[`Button variants Outlined should render a danger button 1`] = `
<button
  class="Buttonbasestyles__ButtonBase-sc-ybojtw-0 Buttonoutlinedstyles__OutlinedButton-sc-1daesx2-0 bezjLz kQunRG"
  data-medesign-key="button"
  label="Button"
>
  <span
    style="white-space: nowrap; overflow: hidden; text-overflow: ellipsis;"
  >
    Button
  </span>
</button>
`;

exports[`Button variants Outlined should render a outlined button 1`] = `
<button
  class="Buttonbasestyles__ButtonBase-sc-ybojtw-0 Buttonoutlinedstyles__OutlinedButton-sc-1daesx2-0 bezjLz hHjZSY"
  data-medesign-key="button"
  label="Button"
>
  <span
    style="white-space: nowrap; overflow: hidden; text-overflow: ellipsis;"
  >
    Button
  </span>
</button>
`;

exports[`Button variants Outlined should render a success button 1`] = `
<button
  class="Buttonbasestyles__ButtonBase-sc-ybojtw-0 Buttonoutlinedstyles__OutlinedButton-sc-1daesx2-0 bezjLz doNDOT"
  data-medesign-key="button"
  label="Button"
>
  <span
    style="white-space: nowrap; overflow: hidden; text-overflow: ellipsis;"
  >
    Button
  </span>
</button>
`;

exports[`Button variants Text should render a danger button 1`] = `
<button
  class="Buttonbasestyles__ButtonBase-sc-ybojtw-0 Buttontextstyles__TextButton-sc-1oc6mlh-0 bezjLz hGRjNb"
  data-medesign-key="button"
  label="Button"
>
  <span
    style="white-space: nowrap; overflow: hidden; text-overflow: ellipsis;"
  >
    Button
  </span>
</button>
`;

exports[`Button variants Text should render a success button 1`] = `
<button
  class="Buttonbasestyles__ButtonBase-sc-ybojtw-0 Buttontextstyles__TextButton-sc-1oc6mlh-0 bezjLz cVQWFG"
  data-medesign-key="button"
  label="Button"
>
  <span
    style="white-space: nowrap; overflow: hidden; text-overflow: ellipsis;"
  >
    Button
  </span>
</button>
`;

exports[`Button variants Text should render a text button 1`] = `
<button
  class="Buttonbasestyles__ButtonBase-sc-ybojtw-0 Buttontextstyles__TextButton-sc-1oc6mlh-0 bezjLz jmYcTn"
  data-medesign-key="button"
  label="Button"
>
  <span
    style="white-space: nowrap; overflow: hidden; text-overflow: ellipsis;"
  >
    Button
  </span>
</button>
`;
